# rt_2

./: Cargo.toml  README.md  README_basic_types.md  README_scene_elements.md  big_lights.json  out.ppm  output.ppm  scene.json  scene1.json  scene2.json  scene2.ppm  scene3.json  scene4.json  scene5.json  scene6.json  scene7.json  scene8.json  temp.json  test.ppm
rt_editor/: output.ppm
src/: lib.rs  main.rs  scenes.rs
src/core/: color.rs  hit.rs  mod.rs  ray.rs  vec3.rs
src/material/: dielectric.rs  diffuse_light.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/objects/: cube.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs
src/particle_system/: mod.rs  particle_sys.rs
src/pixels/: image.rs  mod.rs  texture.rs
src/scene/: camera.rs  light.rs  mod.rs  scene.rs  storage.rs
