[package]
name = "rt_2"
version = "0.1.0"
edition = "2021"
default-run = "rt_2"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25.8"
indicatif = "0.18.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.33.0"
egui = "0.33.0"
rfd = "0.15.4"
glam = "0.30.8"

[[bin]]
name = "scene_editor"
path = "src/bin/scene_editor.rs"
